--- a/src/main/resources/openapi/schemas/UploadFileDto.yml
+++ b/src/main/resources/openapi/schemas/UploadFileDto.yml
@@ -1,16 +1,18 @@
 type: object
 required:
   - name
+  - userId
   - base64Data
 properties:
   name:
     type: string
     example: file name
-  base64Data:
-    type: string
-    example: base64Data
   userId:
     type: integer
     format: int64
     example: 123
+  base64Data:
+    type: string
+    example: base64Data
+
 
